@@ -1,14 +1,17 @@
 package org.folio.rest.utils;
 
-import static org.folio.test.support.ApiTests.TENANT_NAME;
+import static com.github.tomakehurst.wiremock.client.WireMock.postRequestedFor;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlPathMatching;
+import static java.util.stream.Collectors.toList;
 
 import java.util.List;
 import java.util.Optional;
 
 import org.apache.commons.lang3.StringUtils;
-import org.folio.rest.domain.FeeFineKafkaTopic;
 import org.folio.rest.service.LogEventPublisher.LogEventPayloadType;
-import org.folio.test.support.KafkaTestHelper;
+import org.folio.test.support.OkapiDeployment;
+
+import com.github.tomakehurst.wiremock.verification.LoggedRequest;
 
 import io.vertx.core.json.JsonObject;
 
@@ -16,42 +19,49 @@ public class LogEventUtils {
   private LogEventUtils() {
   }
 
-  public static List<JsonObject> fetchPublishedLogRecords(long fromTimestampMs) {
-    String topic = FeeFineKafkaTopic.LOG_RECORD_TOPIC.fullTopicName(TENANT_NAME);
-    return KafkaTestHelper.getInstance().pollMessages(topic, fromTimestampMs)
-      .stream()
+  public static List<JsonObject> fetchPublishedLogRecords(OkapiDeployment okapiDeployment) {
+    return okapiDeployment
+      .findRequestsMatching(postRequestedFor(urlPathMatching("/pubsub/publish")).build())
+      .getRequests().stream()
+      .map(LoggedRequest::getBodyAsString)
       .map(JsonObject::new)
-      .toList();
+      .filter(json -> "LOG_RECORD".equals(json.getString("eventType")))
+      .collect(toList());
   }
 
-  public static List<JsonObject> fetchPublishedLogRecords(long fromTimestampMs,
+  public static List<JsonObject> fetchPublishedLogRecords(OkapiDeployment okapiDeployment,
     LogEventPayloadType logEventPayloadType) {
 
-    return fetchPublishedLogRecords(fromTimestampMs)
+    return fetchPublishedLogRecords(okapiDeployment)
       .stream()
       .filter(json -> isLogEventOfType(json, logEventPayloadType))
-      .toList();
+      .collect(toList());
   }
 
   private static boolean isLogEventOfType(JsonObject event, LogEventPayloadType logEventType) {
     return Optional.of(event)
+      .map(json -> json.getString("eventPayload"))
+      .map(JsonObject::new)
       .filter(json -> StringUtils.equals(json.getString("logEventType"), logEventType.value()))
       .isPresent();
   }
 
-  public static List<String> fetchLogEventPayloads(long fromTimestampMs) {
-    return fetchPublishedLogRecords(fromTimestampMs).stream()
+  public static List<String> fetchLogEventPayloads(OkapiDeployment okapiDeployment) {
+    return fetchPublishedLogRecords(okapiDeployment).stream()
+      .map(json -> json.getString("eventPayload"))
+      .map(JsonObject::new)
       .map(json -> json.getJsonObject("payload").encodePrettily())
-      .toList();
+      .collect(toList());
   }
 
-  public static String fetchFirstLogRecordEventPayload(long fromTimestampMs,
+  public static String fetchFirstLogRecordEventPayload(OkapiDeployment okapiDeployment,
     LogEventPayloadType logEventPayloadType) {
 
-    return fetchPublishedLogRecords(fromTimestampMs, logEventPayloadType)
+    return fetchPublishedLogRecords(okapiDeployment, logEventPayloadType)
       .stream()
-      .map(json -> json.getJsonObject("payload").encodePrettily())
+      .map(json -> json.getString("eventPayload"))
       .findFirst()
       .orElseThrow(() -> new IllegalStateException("No log records found"));
   }
+
 }
